Update LexicalAnalyzer.java